Aligned buttons and corrected 2 vars

--- a/src/components/List.css
+++ b/src/components/List.css
@@ -24,8 +24,10 @@
 
 .delete-btn {
   right: 13.5rem;
+  top: 8.4rem;
 }
 
 .check-btn {
   right: 10.7rem;
+  top: 8.4rem;
 }
