--- a/src/components/ListItem.css
+++ b/src/components/ListItem.css
@@ -2,7 +2,7 @@ input[type="number"] {
   width: 2.5rem;
   background-color: transparent;
   border: none;
-  font-family: Kalam, cursive;
+  font-family: var(--content-font);
   font-size: 1.2rem;
   color: var(--content-color);
 }
@@ -11,7 +11,7 @@ select {
   border: none;
   margin-left: 0.5rem;
   margin-right: 2rem;
-  font-family: Kalam, cursive;
+  font-family: var(--content-font);
   font-size: 1.2rem;
   color: var(--content-color);
 }
