--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -14,6 +14,7 @@ input[type="text"] {
   height: 2.5rem;
   background-color: var(--headers-color);
   transition: background-color 0.3s;
+  vertical-align: bottom;
 }
 .form-button:hover {
   background-color: var(--headers-color-dark);
